--- a/tablas.html
+++ b/tablas.html
@@ -9,7 +9,7 @@
 <body>
     <!-- etiqueta table, representa toda la tabla -->
     <!-- USANDO ATRIBUTOS COLSPAN ROWSPAN -->
-<!--     <table>
+    <table>
         <tr>
             <th rowspan="2">Precio</th>
             <th rowspan="2">Cantidad</th>
@@ -27,7 +27,7 @@
             <td>500</td>
             <td>450</td>
         </tr>
-    </table> -->
+    </table>
     <!-- usando estructura semántica -->
 <!--     <table>
         <caption>Caption </caption>
